# RoboMaz

./: .gitignore  FolderStructure.txt  Phone_Developer_Mode.txt  QtCreator_Android_Issues_Solutions.docx  README.md  RoboMAZ-Unified Robotics & IoT Project.docx
ESP32-S3_CAN_Bluetooth_Wifi_IO/: .gitignore  CMakeLists.txt  sdkconfig.defaults
ESP32-S3_CAN_Bluetooth_Wifi_IO/BoardInfo/: Readme.txt  YD-ESP32-S3_Board_Reference.md
ESP32-S3_CAN_Bluetooth_Wifi_IO/main/: CMakeLists.txt  main.cpp
ESP32-S3_CAN_Bluetooth_Wifi_IO/main/LED/: MAZLed.cpp  MAZLed.hpp
ESP32_S3_4wheel/main/: CMakeLists.txt  idf_component.yml  main.cpp
ESP32_S3_4wheel/main/Compass/: MAZGY271.cpp  MAZGY271.hpp
ESP32_S3_4wheel/main/IMU/: MAZMPU6050.cpp  MAZMPU6050.hpp
ESP32_S3_4wheel/main/LCD/: MAZLCD.cpp  MAZLCD.hpp
ESP32_S3_4wheel/main/Motor/: MecanumRobot.cpp
ESP32_S3_4wheel/main/PWM/: MAZPWM.cpp  MAZPWM.hpp
docs/: ESP32_S3.docx  Errors.docx  RTOS_DeepLearning_Plan.md  RoboNet_Project.md  RoboNet_ProjectTracker.xlsx
mobile/MobileApp/: CMakeLists.txt  Main.qml  deploy.bat  flashlightcontroller.h  main.cpp  main.cpp.tmp.11888.7e188e2b5bfa  main.cpp.tmp.11888.9e1f563c180b  ~$Issues.docx
mobile/MobileApp/android/: AndroidManifest.xml  gradle.properties
mobile/MobileApp/android/res/values/: colors.xml  libs.xml
mobile/MobileApp/android/src/org/qtproject/example/appMobileApp/: SensorBridge.java
mobile/MobileApp/peripherals/bluetooth/: BluetoothController.cpp  BluetoothController.h
mobile/MobileApp/peripherals/flashlight/: FlashlightController.h
mobile/MobileApp/peripherals/sensors/: SensorController.cpp  SensorController.h
mobile/MobileApp/qml/: BluetoothPage.qml  CompassPage.qml  FlashlightPage.qml  GyroscopePage.qml  Main.qml
